Lower subtree (treeMode=1) pullTree optimisation various cleanups/improvements

--- a/TODO
+++ b/TODO
@@ -1,14 +1,15 @@
-TODO: stuff
+Color constructor: RGB and hex
 
 connectors different start/end time? -> painful but useful for parseDir symlinks
 
 external (translatable) strings for errors and messages ?
+
 GRAMPS file format parser
 GEDCOM file format parser
+
 CSV generator (generateCSV)
 
-implement only-lower-subtree mode
-          and both-subtree optimise at creation time
+optimise both-subtree at creation time
 
 parseDIR (depth based and then time pased)
 
