--- a/TODO
+++ b/TODO
@@ -1,20 +1,17 @@
 Color constructor: RGB and hex
 
-move infobox title and text into CSV (T and TT) ???
-	-> no more infobox directly from directory parsing
 
 add option to display namechanges within dot (nameChangeStyle)
 add option to display dot with stroke instead of fill (dotStyle)
 
-add option to insert SVG's in CSV? (SVG as control field) -> PNG etc
 
-label backgrounds... (use font renderer?)
-
+CSV generator (generateCSV)
 
 
 parseDIR (depth based and then time pased)
-CSV generator (generateCSV)
 
+
+label backgrounds... maybe use font renderer? (freetype)
 
 optimise both-subtree at creation time
 
