--- a/TODO
+++ b/TODO
@@ -1,29 +1,28 @@
-Color constructor: RGB and hex
 
-
-add option to display namechanges within dot (nameChangeStyle)
-add option to display dot with stroke instead of fill (dotStyle)
-
-
-CSV generator (generateCSV)
+________________________________________________________________ v0.1
 
 
 parseDIR (depth based and then time based)
 
-
-label backgrounds... maybe use font renderer? (freetype)
+GRAMPS file format parser
+GEDCOM file format parser
 
 optimise both-subtree at creation time
+
+________________________________________________________________ v0.2
+
 
 add option curvedConnectors ?
 
 external (translatable) strings for errors and messages ?
 
-GRAMPS file format parser
-GEDCOM file format parser
+take a look at libpng, then maybe implement colormap
+signature generator: 500x500 SVG (PNG if possible), average distribution, grayscale
 
-add ability to override options in CSV? (with X flag) -> easy to implement
+add ability to override options in CSV? (with X flag)
+  -> easy to implement, but bad practice (weakening conffile devalues parserDIR etc)
+  -> must implement generatorCONF with a CSV as input
+
+label backgrounds... maybe use font renderer? (freetype)
 
 base GUI on csveditor (java)?
-
-scrap GCT
