--- a/TODO
+++ b/TODO
@@ -1,16 +1,8 @@
-use setbit for dates -> generating CSV has xxxx.yy instead of xxxx.yy.zz
-
-improve command line interface: allow different output file name
-	input.csv output.svg bla.conf
 
 what about icons? insert base64 PNGs and JPGs?
 
-change labelBackground to labelBackgroundOpacity?
-
-improve README and PROGRAMMING
-
 make sure it works on OSX
-make sure it works on Windows
+make sure it works on Windows (folder delimiter in helpers)
 
 ________________________________________________________________ v0.1
 
