--- a/TODO
+++ b/TODO
@@ -1,10 +1,7 @@
 
-make sure it works on OSX
-make sure it works on Windows (folder delimiter in helpers)
+make sure it compiles on OSX and Windows (MinGW)
 
 ________________________________________________________________ v0.1
-
-improve command line interface? (getopts)
 
 translatable strings (gettext)
 
@@ -14,6 +11,8 @@ GRAMPS file format parser
 GEDCOM file format parser
 
 optimise both-subtree at creation time
+
+change command line interface? (getopts)
 
 ________________________________________________________________ v0.2
 
