--- a/MANUAL/source/gnuclad-programming.texi
+++ b/MANUAL/source/gnuclad-programming.texi
@@ -16,12 +16,12 @@ Patches are always welcome. New parsers/generators even more so!
 When adding a configuration option, be sure to implement it at least in the
 following places:
 @itemize @bullet
-@item gnuclad.h declaration
+@item gnuclad.h declaration (members of the Cladogram class)
 @item gnuclad.cpp initalisation (in the constructor of the Cladogram object)
 @item gnuclad.cpp parser (in the parseOptions function)
 @item generatorCONF.cpp
-@item the texinfo documentation, chapter Config Options (insert the config file
-      created by generatorCONF)
+@item the texinfo documentation, chapter Config Options (insert the new config
+      file created by generatorCONF)
 @item third party gnuclad configuration files you have access to
 @end itemize
 
@@ -47,13 +47,15 @@ parserXXX.h:
 #include "gnuclad.h"
 derive class from Parser:
   class ParserXXX: public Parser
-add public method:
+declare constructor and destructor
+declare public method:
   void parseData(Cladogram * clado, std::ifstream * fp);
 @end example
 
 parserXXX.cpp:
 @example
 #include "parserXXX.h"
+implement constructor and destructor
 implement parseData(Cladogram * clad, std::ifstream * fp);
 @end example
 
@@ -72,13 +74,15 @@ generatorXXX.h:
 #include "gnuclad.h"
 derive class from generator:
   class GeneratorXXX: public Generator
-add public method:
+declare constructor and destructor
+declare public method:
   void writeData(Cladogram * clad, std::ofstream * fp);
 @end example
 
 generatorXXX.cpp:
 @example
 #include "generatorXXX.h"
+implement constructor and destructor
 implement writeData();
 @end example
 
