--- a/README
+++ b/README
@@ -11,7 +11,13 @@ in the MANUAL folder.
 
 HOW TO COMPILE & INSTALL
 
-Open this folder in a terminal and type:
+gnuclad is built with the GNU toolchain, specifically g++ and GNU make.
+These are included in most GNU/Linux distributions and can be obtained
+from the Xcode developer package on OSX.
+On Windows, compilation works flawlessly with MinGW & MSYS, though it should be
+possible with other compilers by tweaking the Makefile.
+
+To compile gnuclad, open this folder in a terminal and type:
   make
 
 This will produce a 'gnuclad' binary in the bin folder.
@@ -29,7 +35,7 @@ directory and run the install routine:
   cd ..
   make install
 
-Then restart your terminal. You should be able to call gnuclad from any folder.
-If you wish to uninstall gnuclad, simply open a terminal in the main
-gnuclad folder and execute:
+You should now be able to call gnuclad from any folder.
+If you wish to uninstall gnuclad, simply open a terminal in that same
+main gnuclad folder and execute:
   make uninstall
