--- a/MANUAL/source/gnuclad-about.texi
+++ b/MANUAL/source/gnuclad-about.texi
@@ -69,7 +69,7 @@ acquainted with it's syntax:
 
 Change to the example folder and generate your first SVG image:
 @example
-  cd ../example
+  cd ../EXAMPLE
   ../bin/gnuclad example.csv svg example.conf
 @end example
 
